# llvm-project

clang/include/clang/Frontend/: FrontendOptions.h
clang/include/clang/Lex/: HeaderSearchOptions.h
clang/include/clang/Options/: Options.td
clang/include/clang/Sema/: Sema.h
clang/include/clang/Serialization/: TemplateInstantiationCache.h
clang/include/clang/TemplateCache/: ASTImporterCacheBackend.h  CompositeCacheBackend.h  DaemonCacheBackend.h
clang/lib/: CMakeLists.txt
clang/lib/FrontendTool/: CMakeLists.txt  ExecuteCompilerInvocation.cpp
clang/lib/Sema/: Sema.cpp  SemaTemplateInstantiate.cpp  SemaTemplateInstantiateDecl.cpp
clang/lib/Serialization/: CMakeLists.txt  TemplateInstantiationCache.cpp
clang/lib/TemplateCache/: ASTImporterCacheBackend.cpp  CMakeLists.txt  CompositeCacheBackend.cpp  DaemonCacheBackend.cpp
clang/test/TemplateInstantiationCache/: basic-roundtrip.cpp  cache-invalidation.cpp  check_trace_improvement.py  codegen-identical.cpp  concurrent-safety.cpp  corrupt-cache-graceful.cpp  delta-compression.cpp  explicit-instantiation.cpp  filesystem-errors.cpp  forward-decl-safety.cpp  ftime-trace.cpp  function-template.cpp  hash-stability.cpp  module-interaction.cpp  negative-cache.cpp  nested-templates.cpp  no-cache-no-flag.cpp  odr-conflict-safe.cpp  pch-interaction.cpp  perf-regression.cpp  stl-types.cpp
clang/tools/: CMakeLists.txt
clang/tools/clang-template-cache-daemon/: CMakeLists.txt  Opts.td  clang-template-cache-daemon.cpp
clang/utils/: template-cache-benchmark.py
libcxx/include/: map  set
(+1 files in other folders)
